--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,8 @@
                 background: linear-gradient(#2b1055, #7597de);
                 min-height: 100vh;
                 overflow-x:hidden;
-            }
+             
+                  }
             
             header {
                 position: absolute;
@@ -126,4 +127,8 @@
                 font-size:1em;
                 color: #fff;
 
+            }
+
+            .btn_icon_header{
+                display: none;
             }
